# TinySQLDb

./: .gitignore  LICENSE  README.md
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css
scripts/: demo_errors.sql  demo_success.sql  generate_benchmark.py  run_benchmark.py
server/: CMakeLists.txt  index.js  package.json  storage.js
server/certs/: cert.pem  key.pem
server/include/: ApiServer.h  QueryProcessor.h
server/include/nlohmann/: json.hpp
server/mock_server/: index.js  package-lock.json  package.json
server/query-processor/include/: Parser.h  Validator.h
server/query-processor/src/: Parser.cpp  Validator.cpp
server/src/: ApiServer.cpp  QueryProcessor.cpp  main.cpp
server/stored-data/include/: BSTIndex.h  BTreeIndex.h  CatalogManager.h  StoredDataManager.h  TableFile.h
server/stored-data/src/: BSTIndex.cpp  BTreeIndex.cpp  CatalogManager.cpp  StoredDataManager.cpp  TableFile.cpp
server/web-api/include/: ApiHandler.h
server/web-api/src/: ApiHandler.cpp
